--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(asio-grpc REQUIRED)
 find_package(range-v3 REQUIRED)
 find_package(clipper REQUIRED)
 find_package(ctre REQUIRED)
+find_package(neargye-semver REQUIRED)
 
 asio_grpc_protobuf_generate(PROTOS "${GRPC_PROTOS}"
         IMPORT_DIRS ${GRPC_IMPORT_DIRS}
@@ -24,5 +25,5 @@ target_include_directories(curaengine_plugin_infill_generate
         ${CMAKE_CURRENT_BINARY_DIR}/generated
         )
 
-target_link_libraries(curaengine_plugin_infill_generate PUBLIC clipper::clipper ctre::ctre asio-grpc::asio-grpc protobuf::libprotobuf boost::boost spdlog::spdlog docopt_s range-v3::range-v3)
+target_link_libraries(curaengine_plugin_infill_generate PUBLIC clipper::clipper ctre::ctre asio-grpc::asio-grpc protobuf::libprotobuf boost::boost spdlog::spdlog docopt_s range-v3::range-v3 neargye-semver::neargye-semver)
 
