Updated infill_generator and associated files to include the settings for rotating tiles.
Introduced two new parameters, 'rotate_tiles' and 'rotate_degree', in
the 'infill_generator.h' which will determine whether to rotate the
tiles and the degree of tile rotation, respectively. Updated the
associated json and generate.h files accordingly to fetch these
settings. This change allows us to provide the users with an option to
change the orientation of the infill pattern in the 3D print setup, thus
giving more flexibility for customization.

--- a/CuraEngineInfillGenerate/infill_settings.def.json
+++ b/CuraEngineInfillGenerate/infill_settings.def.json
@@ -34,6 +34,26 @@
         "default_value": true,
         "settable_per_mesh": true,
         "enabled": "infill_pattern.startswith(\"PLUGIN\")"
+      },
+      "rotate_tiles": {
+        "label": "Rotate Tiles",
+        "description": "Rotate the content of the tiles.",
+        "type": "bool",
+        "default_value": true,
+        "settable_per_mesh": true,
+        "enabled": "infill_pattern.startswith(\"PLUGIN\")"
+      },
+      "rotate_degree": {
+        "label": "Rotatation degree",
+        "description": "The angle of rotation for the tile content. Each adjacent tile will be rotated with this amount.",
+        "unit": "\u00b0",
+        "type": "float",
+        "minimum_value": "0",
+        "maximum_value": "360",
+        "default_value": 0,
+        "value": "90.0 if infill_pattern.endswith(\"square\") else 60.0",
+        "settable_per_mesh": true,
+        "enabled": "infill_pattern.startswith(\"PLUGIN\") and rotate_tiles"
       }
     }
   }
