--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,12 @@
 name: Create CuraPackage
-run-name: ${{ inputs.plugin_git_version }} by @${{ github.actor }}
+run-name: ${{ inputs.plugin_conan_version }} by @${{ github.actor }}
 
 on:
   workflow_dispatch:
     inputs:
-      plugin_git_version:
-        description: 'Plugin git Version'
-        default: 'main'
+      plugin_conan_version:
+        description: 'Plugin Conan Version'
+        default: 'curaengine_plugin_infill_generate/latest@ultimaker/testing'
         required: true
         type: string
       conan_args:
@@ -19,7 +19,7 @@ jobs:
   windows-installer:
     uses: ./.github/workflows/windows.yml
     with:
-      plugin_git_version: ${{ inputs.plugin_git_version }}
+      plugin_conan_version: ${{ inputs.plugin_conan_version }}
       conan_args: ${{ inputs.conan_args }}
       architecture: X64
       operating_system: windows-2022
@@ -28,7 +28,7 @@ jobs:
   linux-modern-installer:
     uses: ./.github/workflows/linux.yml
     with:
-      plugin_git_version: ${{ inputs.plugin_git_version }}
+      plugin_conan_version: ${{ inputs.plugin_conan_version }}
       conan_args: ${{ inputs.conan_args }}
       architecture: X64
       operating_system: ubuntu-22.04
@@ -37,15 +37,24 @@ jobs:
   macos-installer:
     uses: ./.github/workflows/macos.yml
     with:
-      plugin_git_version: ${{ inputs.plugin_git_version }}
+      plugin_conan_version: ${{ inputs.plugin_conan_version }}
       conan_args: ${{ inputs.conan_args }}
       architecture: X64
       operating_system: macos-11.0
     secrets: inherit
 
+  macos-arm-installer:
+    uses: ./.github/workflows/macos.yml
+    with:
+      plugin_conan_version: ${{ inputs.plugin_conan_version }}
+      conan_args: ${{ inputs.conan_args }}
+      architecture: ARM64
+      operating_system: self-hosted
+    secrets: inherit
+
   create-curapackages:
     runs-on: "ubuntu-latest"
-    needs: [ windows-installer, linux-modern-installer, macos-installer ]
+    needs: [ windows-installer, linux-modern-installer, macos-installer, macos-arm-installer ]
 
     steps:
       - name: Checkout
@@ -54,7 +63,7 @@ jobs:
       - name: Download the run info
         uses: actions/download-artifact@v2
         with:
-          name: linux-run-info
+          name: macos-run-info
 
       - name: Set the run info as environment variables
         run: |
@@ -63,7 +72,7 @@ jobs:
       - name: Download the Cura plugin
         uses: actions/download-artifact@v2
         with:
-          name: linux-cura-plugin
+          name: macos-cura-plugin
           path: cura-plugin
 
       - name: Download linux modern binary artifacts
@@ -77,6 +86,12 @@ jobs:
         with:
           name: macOS-X64
           path: cura-plugin/CuraEngineInfillGenerate/x86_64/Darwin
+
+      - name: Download mac arm binaries artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: macOS-ARM64
+          path: cura-plugin/CuraEngineInfillGenerate/arm64/Darwin
 
       - name: Download win X64 binaries artifacts
         uses: actions/download-artifact@v2
