Added robustness Changes from CURA-10619
CURA-10992

--- a/CuraEngineInfillGenerate/infill_settings.def.json
+++ b/CuraEngineInfillGenerate/infill_settings.def.json
@@ -17,7 +17,7 @@
       },
       "tile_size": {
         "label": "Tile Size",
-        "description": "Size of the tiles.",
+        "description": "Size of the tiles. This eventually affects the infill density of the object",
         "unit": "mm",
         "type": "float",
         "minimum_value": "0.5",
