--- a/.github/workflows/conan-package.yml
+++ b/.github/workflows/conan-package.yml
@@ -9,36 +9,22 @@ name: conan-package
 on:
   workflow_dispatch:
     inputs:
-      # FIXME: Not yet implemented
       conan_id:
         required: false
         type: string
-        description: 'The full conan package ID, e.g. "curaengine_plugin_postprocess/1.2.3@ultimaker/stable"'
+        description: 'The full conan package ID, e.g. "curaengine_plugin_infill_generate/1.2.3@ultimaker/stable"'
       create_latest_alias:
         required: true
         default: false
         type: boolean
         description: 'Create latest alias'
-      create_binaries_windows:
-        required: true
-        default: false
-        type: boolean
-        description: 'create binaries Windows'
-      create_binaries_linux:
-        required: true
-        default: false
-        type: boolean
-        description: 'create binaries Linux'
-      create_binaries_macos:
-        required: true
-        default: false
-        type: boolean
-        description: 'create binaries Macos'
 
   push:
     paths:
       - 'include/**'
       - 'src/**'
+      - 'tests/**'
+      - 'CuraEngineInfillGenerate/**'
       - 'conanfile.py'
       - 'CMakeLists.txt'
       - '.github/workflows/conan-package.yml'
@@ -46,8 +32,8 @@ on:
     branches:
       - main
       - 'CURA-*'
-      - '[1-9].[0-9]*'
-      - '[1-9].[0-9][0-9]*'
+      - '[0-9].[0-9]*'
+      - '[0-9].[0-9][0-9]*'
     tags:
       - '[0-9]+.[0-9]+.[0-9]*'
       - '[0-9]+.[0-9]+.[0-9]'
@@ -56,7 +42,7 @@ jobs:
   conan-recipe-version:
     uses: ultimaker/cura/.github/workflows/conan-recipe-version.yml@main
     with:
-      project_name: curaengine_plugin_postprocess
+      project_name: curaengine_plugin_infill_generate
 
   conan-package-export:
     needs: [ conan-recipe-version ]
@@ -69,49 +55,9 @@ jobs:
       conan_logging_level: 'info'
     secrets: inherit
 
-  conan-package-create-macos:
-    needs: [ conan-recipe-version, conan-package-export ]
-
-    uses: ultimaker/cura/.github/workflows/conan-package-create.yml@main
-    with:
-      project_name: ${{ needs.conan-recipe-version.outputs.project_name }}
-      recipe_id_full: ${{ needs.conan-recipe-version.outputs.recipe_id_full }}
-      build_id: 3
-      runs_on: 'macos-11'
-      python_version: '3.11.x'
-      conan_logging_level: 'info'
-    secrets: inherit
-
-  conan-package-create-windows:
-    needs: [ conan-recipe-version, conan-package-export ]
-
-    uses: ultimaker/cura/.github/workflows/conan-package-create.yml@main
-    with:
-      project_name: ${{ needs.conan-recipe-version.outputs.project_name }}
-      recipe_id_full: ${{ needs.conan-recipe-version.outputs.recipe_id_full }}
-      build_id: 4
-      runs_on: 'windows-2022'
-      python_version: '3.11.x'
-      conan_config_branch: ''
-      conan_logging_level: 'info'
-    secrets: inherit
-
-  conan-package-create-linux-modern:
-    needs: [ conan-recipe-version, conan-package-export ]
-
-    uses: ultimaker/cura/.github/workflows/conan-package-create.yml@main
-    with:
-      project_name: ${{ needs.conan-recipe-version.outputs.project_name }}
-      recipe_id_full: ${{ needs.conan-recipe-version.outputs.recipe_id_full }}
-      build_id: 2
-      runs_on: 'ubuntu-22.04'
-      python_version: '3.11.x'
-      conan_logging_level: 'info'
-    secrets: inherit
-
   notify-export:
     if: ${{ always() }}
-    needs: [ conan-recipe-version, conan-package-export ]
+    needs: [ conan-package-export ]
 
     uses: ultimaker/cura/.github/workflows/notify.yml@main
     with:
@@ -120,17 +66,4 @@ jobs:
       success_body: "Exported ${{ needs.conan-recipe-version.outputs.recipe_id_full }}"
       failure_title: "Failed to export Conan Export in ${{ github.repository }}"
       failure_body: "Failed to exported ${{ needs.conan-recipe-version.outputs.recipe_id_full }}"
-    secrets: inherit
-
-  notify-create:
-    if: ${{ always() && ((github.event_name == 'push' && (github.ref_name == 'main' || github.ref_name == 'master' || needs.conan-recipe-version.outputs.is_release_branch == 'true')) || (github.event_name == 'workflow_dispatch' && inputs.create_binaries_linux)) }}
-    needs: [ conan-recipe-version, conan-package-create-macos, conan-package-create-windows, conan-package-create-linux-modern ]
-
-    uses: ultimaker/cura/.github/workflows/notify.yml@main
-    with:
-      success: ${{ contains(join(needs.*.result, ','), 'success') }}
-      success_title: "New binaries created in ${{ github.repository }}"
-      success_body: "Created binaries for ${{ needs.conan-recipe-version.outputs.recipe_id_full }}"
-      failure_title: "Failed to create binaries in ${{ github.repository }}"
-      failure_body: "Failed to created binaries for ${{ needs.conan-recipe-version.outputs.recipe_id_full }}"
     secrets: inherit
