--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -83,57 +83,52 @@ jobs:
             $HOME/.conan/conan_download_cache
           key: conan-${{ runner.os }}-${{ runner.arch }}-installer-cache
 
-      - name: Hack needed specifically for ubuntu-22.04 from mid-Feb 2023 onwards
-        if: ${{ startsWith(inputs.operating_system, 'ubuntu-22.04') }}
-        run: sudo apt remove libodbc2 libodbcinst2 unixodbc-common -y
-
-      # NOTE: Due to what are probably github issues, we have to remove the cache and reconfigure before the rest.
-      #       This is maybe because grub caches the disk it uses last time, which is recreated each time.
       - name: Install Linux system requirements
         run: |
-          sudo rm /var/cache/debconf/config.dat
-          sudo dpkg --configure -a
           sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
           sudo apt update
           sudo apt upgrade
           sudo apt install build-essential checkinstall libegl-dev zlib1g-dev libssl-dev ninja-build autoconf libx11-dev libx11-xcb-dev libfontenc-dev libice-dev libsm-dev libxau-dev libxaw7-dev libxcomposite-dev libxcursor-dev libxdamage-dev libxdmcp-dev libxext-dev libxfixes-dev libxi-dev libxinerama-dev libxkbfile-dev libxmu-dev libxmuu-dev libxpm-dev libxrandr-dev libxrender-dev libxres-dev libxss-dev libxt-dev libxtst-dev libxv-dev libxvmc-dev libxxf86vm-dev xtrans-dev libxcb-render0-dev libxcb-render-util0-dev libxcb-xkb-dev libxcb-icccm4-dev libxcb-image0-dev libxcb-keysyms1-dev libxcb-randr0-dev libxcb-shape0-dev libxcb-sync-dev libxcb-xfixes0-dev libxcb-xinerama0-dev xkb-data libxcb-dri3-dev uuid-dev libxcb-util-dev libxkbcommon-x11-dev pkg-config -y
 
-      - name: Install GCC-12 on ubuntu-22.04
-        if: ${{ startsWith(inputs.operating_system, 'ubuntu-22.04') }}
+      - name: Install GCC-13
         run: |
-          sudo apt install g++-12 gcc-12 -y
-          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-12 12
-          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-12 12
+          sudo apt install g++-13 gcc-13 -y
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 13
+          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-13 13
+
+      - name: Get Conan configuration
+        run: |
+          conan config install https://github.com/Ultimaker/conan-config.git
+          conan config install https://github.com/Ultimaker/conan-config.git -a "-b runner/${{ runner.os }}/${{ runner.arch }}"
 
       - name: Create the default Conan profile
         run: conan profile new default --detect --force
 
-      - name: Get Conan configuration
-        run: conan config install https://github.com/Ultimaker/conan-config.git
-
       - name: Use Conan download cache (Bash)
         run: conan config set storage.download_cache="$HOME/.conan/conan_download_cache"
 
-      - name: Create the Packages (Powershell)
+      - name: Create the Packages (Bash)
+        run: conan install $PLUGIN_CONAN_VERSION ${{ inputs.conan_args }} --build=missing --update -if plugin_inst
+
+      - name: Upload the Package(s)
+        if: always()
         run: |
-          conan install . curaengine_plugin_infill_generate/${{ inputs.plugin_git_version }}@jellespijker/testing ${{ inputs.conan_args }} --build=missing --update -s curaengine_plugin_infill_generate:compiler.cppstd=20
-          cmake --preset release
-          cmake --build --preset release
+          conan upload "*" -r cura --all -c
 
       - name: Upload the binary
         uses: actions/upload-artifact@v3
         with:
           name: ${{ runner.os }}-${{ runner.arch }}
           path: |
-            build/Release/curaengine_plugin_infill_generate
+            plugin_inst/curaengine_plugin_infill_generate
           retention-days: 5
 
       - name: Upload the cura plugin
         uses: actions/upload-artifact@v3
         with:
-          name: linux-cura-plugin
+          name: macos-cura-plugin
           path: |
-            CuraEngineInfillGenerate/**/*
+            plugin_inst/CuraEngineTiledInfill/**/*
           retention-days: 5
 
       - name: Write the run info
