Disabled mac-os M1 runner for now
Need to be cleaned up and I don't have access atm

Contributes to CURA-10992

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -126,7 +126,7 @@ jobs:
       - name: Upload the cura plugin
         uses: actions/upload-artifact@v3
         with:
-          name: macos-cura-plugin
+          name: linux-cura-plugin
           path: |
             plugin_inst/CuraEngineTiledInfill/**/*
           retention-days: 5
