--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,18 +43,19 @@ jobs:
       operating_system: macos-12
     secrets: inherit
 
-  macos-arm-installer:
-    uses: ./.github/workflows/macos.yml
-    with:
-      plugin_conan_version: ${{ inputs.plugin_conan_version }}
-      conan_args: ${{ inputs.conan_args }}
-      architecture: ARM64
-      operating_system: self-hosted
-    secrets: inherit
+  #  macos-arm-installer:
+  #    uses: ./.github/workflows/macos.yml
+  #    with:
+  #      plugin_conan_version: ${{ inputs.plugin_conan_version }}
+  #      conan_args: ${{ inputs.conan_args }}
+  #      architecture: ARM64
+  #      operating_system: self-hosted
+  #    secrets: inherit
 
   create-curapackages:
     runs-on: "ubuntu-latest"
-    needs: [ windows-installer, linux-modern-installer, macos-installer, macos-arm-installer ]
+    needs: [ windows-installer, linux-modern-installer, macos-installer ]
+    #    needs: [ windows-installer, linux-modern-installer, macos-installer, macos-arm-installer ]
 
     steps:
       - name: Checkout
@@ -63,7 +64,7 @@ jobs:
       - name: Download the run info
         uses: actions/download-artifact@v2
         with:
-          name: macos-run-info
+          name: linux-run-info
 
       - name: Set the run info as environment variables
         run: |
@@ -72,7 +73,7 @@ jobs:
       - name: Download the Cura plugin
         uses: actions/download-artifact@v2
         with:
-          name: macos-cura-plugin
+          name: linux-cura-plugin
           path: cura-plugin
 
       - name: Download linux modern binary artifacts
@@ -87,11 +88,11 @@ jobs:
           name: macOS-X64
           path: cura-plugin/CuraEngineTiledInfill/x86_64/Darwin
 
-      - name: Download mac arm binaries artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: macOS-ARM64
-          path: cura-plugin/CuraEngineTiledInfill/arm64/Darwin
+      #      - name: Download mac arm binaries artifacts
+      #        uses: actions/download-artifact@v2
+      #        with:
+      #          name: macOS-ARM64
+      #          path: cura-plugin/CuraEngineTiledInfill/arm64/Darwin
 
       - name: Download win X64 binaries artifacts
         uses: actions/download-artifact@v2
