Ignore auto generated header
Contributes to CURA-10992

--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,7 @@ graph_info.json
 build/
 CMakeUserPresets.json
 
+include/plugin/cmdline.h
 CuraEngineTiledInfill/plugin.json
 CuraEngineTiledInfill/package.json
 CuraEngineTiledInfill/bundled_*.json
