Also create package when templates change
Contributes to CURA-10992

--- a/.github/workflows/conan-package.yml
+++ b/.github/workflows/conan-package.yml
@@ -25,6 +25,7 @@ on:
       - 'src/**'
       - 'tests/**'
       - 'CuraEngineTiledInfill/**'
+      - 'templates'
       - 'conanfile.py'
       - 'CMakeLists.txt'
       - '.github/workflows/conan-package.yml'
