polished the sizes of th etiles individually. added an extra setting to make use of it in future.
CURA-10560

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,4 @@ include/plugin/cmdline.h
 CuraEngineTiledInfill/plugin.json
 CuraEngineTiledInfill/package.json
 CuraEngineTiledInfill/bundled_*.json
+CuraEngineTiledInfill/constants.py
