--- a/.github/workflows/conan-package.yml
+++ b/.github/workflows/conan-package.yml
@@ -41,13 +41,13 @@ on:
 
 jobs:
   conan-recipe-version:
-    uses: ultimaker/cura/.github/workflows/conan-recipe-version.yml@main
+    uses: ultimaker/cura-workflows/.github/workflows/conan-recipe-version.yml@main
     with:
       project_name: curaengine_plugin_infill_generate
 
   conan-package-export:
     needs: [ conan-recipe-version ]
-    uses: ultimaker/cura/.github/workflows/conan-recipe-export.yml@main
+    uses: ultimaker/cura-workflows/.github/workflows/conan-recipe-export.yml@main
     with:
       recipe_id_full: ${{ needs.conan-recipe-version.outputs.recipe_id_full }}
       recipe_id_latest: ${{ needs.conan-recipe-version.outputs.recipe_id_latest }}
@@ -60,7 +60,7 @@ jobs:
     if: ${{ always() }}
     needs: [ conan-package-export ]
 
-    uses: ultimaker/cura/.github/workflows/notify.yml@main
+    uses: ultimaker/cura-workflows/.github/workflows/notify.yml@main
     with:
       success: ${{ contains(join(needs.*.result, ','), 'success') }}
       success_title: "New Conan recipe exported in ${{ github.repository }}"
