--- a/.github/workflows/conan-package.yml
+++ b/.github/workflows/conan-package.yml
@@ -60,7 +60,7 @@ jobs:
     if: ${{ always() }}
     needs: [ conan-package-export ]
 
-    uses: ultimaker/cura-workflows/.github/workflows/notify.yml@main
+    uses: ultimaker/cura-workflows/.github/workflows/slack-notify.yml@main
     with:
       success: ${{ contains(join(needs.*.result, ','), 'success') }}
       success_title: "New Conan recipe exported in ${{ github.repository }}"
