--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
       plugin_conan_version: ${{ inputs.plugin_conan_version }}
       conan_args: ${{ inputs.conan_args }}
       architecture: X64
-      operating_system: windows-2022
+      operating_system: self-hosted-Windows-X64
     secrets: inherit
 
   linux-modern-installer:
@@ -31,7 +31,7 @@ jobs:
       plugin_conan_version: ${{ inputs.plugin_conan_version }}
       conan_args: ${{ inputs.conan_args }}
       architecture: X64
-      operating_system: ubuntu-22.04
+      operating_system: self-hosted-Ubuntu22-X64
     secrets: inherit
 
   macos-installer:
@@ -40,7 +40,7 @@ jobs:
       plugin_conan_version: ${{ inputs.plugin_conan_version }}
       conan_args: ${{ inputs.conan_args }}
       architecture: X64
-      operating_system: macos-12
+      operating_system: self-hosted-X64
     secrets: inherit
 
   macos-arm-installer:
@@ -49,7 +49,7 @@ jobs:
       plugin_conan_version: ${{ inputs.plugin_conan_version }}
       conan_args: ${{ inputs.conan_args }}
       architecture: ARM64
-      operating_system: self-hosted
+      operating_system: self-hosted-ARM64
     secrets: inherit
 
   create-curapackages:
