--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -66,12 +66,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Checkout Cura-workflows repo
+        uses: actions/checkout@v4
+        with:
+          repository: Ultimaker/Cura-workflows
+          path: Cura-workflows
+
       - name: Setup Python and pip
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10.x'
-          cache: 'pip'
-          cache-dependency-path: .github/workflows/requirements-conan-package.txt
+          python-version: 3.11.x
+          cache: pip
+          cache-dependency-path: Cura-workflows/.github/workflows/requirements-runner.txt
 
       - name: Install Python requirements for runner
         run: pip install -r .github/workflows/requirements-conan-package.txt
@@ -84,8 +90,11 @@ jobs:
             $HOME/.conan/conan_download_cache
           key: conan-${{ runner.os }}-${{ runner.arch }}-installer-cache
 
-      - name: Install MacOS system requirements
-        run: brew install cmake autoconf automake ninja create-dmg
+      - name: Install Macos system requirements for building
+        working-directory: Cura-workflows/runner_scripts
+        run: |
+          chmod +x macos_setup.sh
+          ./macos_setup.sh
 
       - name: Create the default Conan profile
         run: conan profile new default --detect --force
