Add proper self-hosted runners for manual builds

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -29,6 +29,7 @@ on:
         options:
           - ubuntu-22.04
           - ubuntu-20.04
+          - self-hosted-Ubuntu22-X64
   workflow_call:
     inputs:
       plugin_conan_version:
