--- a/conandata.yml
+++ b/conandata.yml
@@ -1,3 +1,3 @@
 version: "0.2.1"
 requirements:
-  - "curaengine_grpc_definitions/(latest)@ultimaker/testing"
+  - "curaengine_grpc_definitions/0.2.1"
