Split uploaded files by architecture
CURA-12091

Now we use upload-artifact v4 instead of v3, we can't upload the same
file twice

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -134,7 +134,7 @@ jobs:
       - name: Upload the cura plugin
         uses: actions/upload-artifact@v4
         with:
-          name: macos-cura-plugin
+          name: macos-cura-plugin-${{ runner.arch }}
           path: |
             plugin_inst/CuraEngineTiledInfill/**/*
           retention-days: 5
@@ -149,7 +149,7 @@ jobs:
       - name: Upload the run info
         uses: actions/upload-artifact@v4
         with:
-          name: macos-run-info
+          name: macos-run-info-${{ runner.arch }}
           path: |
             run_info.sh
           retention-days: 5
