(build) Rename input variable-name for the next one.
CURA-11622

--- a/.github/workflows/conan-package.yml
+++ b/.github/workflows/conan-package.yml
@@ -52,6 +52,7 @@ jobs:
 
     uses: ultimaker/cura-workflows/.github/workflows/conan-recipe-export.yml@CURA-11622_conan_v2
     with:
+      package_name: curaengine_plugin_infill_generate
       recipe_id_full: ${{ needs.conan-recipe-version.outputs.recipe_id_full }}
       recipe_id_latest: ${{ needs.conan-recipe-version.outputs.recipe_id_latest }}
     secrets: inherit
